--- a/index.html
+++ b/index.html
@@ -65,6 +65,20 @@
 								<p>
 									The special bond that develops between plus-sized inflatable robot Baymax, and prodigy Hiro Hamada, who team up with a group of friends to form a band of high tech heroes
 								</p>
+								<div class="row"><!--boton 1-->
+									<div class="col-7 boton-trailer">
+										<div class="boton-amarillo">
+											<span class="fa fa-youtube-play"></span> <span><a href="#"> Watch Trailer</a></span>
+										</div>
+									</div>
+								</div>
+								<div class="row"><!--boton 2-->
+									<div class="col-7 boton-ticket">
+										<div class="boton-naranja">
+											<span class="fa fa-ticket"></span> <span><a href="#">Book Ticket</a></span>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -72,8 +86,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
 	<div class="container-fluid"><!--seccion articulos importantes-->
+		
 	</div>
 	<div class="container-fluid"><!--video-->
 	</div>
