--- a/index.html
+++ b/index.html
@@ -86,12 +86,71 @@
 				</div>
 			</div>
 		</div>
-	<div class="container-fluid"><!--seccion articulos importantes-->
-		
+	<div class="container-fluid marked-section"><!--seccion articulos importantes-->
+		<div class="row">
+			<div class="col-12 marked">
+				<div class="row">
+					<div class="col-1 empty"></div>
+					<div class="col-10 contenidos">
+					 	<div class="row">
+					 		<div class="col-2 imagen-destacada pd-2">
+					 			<img src="img/imagen1.jpg">
+					 		</div>
+					 		<div class="col-2 imagen-destacada pd-2">
+					 			<img src="img/imagen2.jpg">
+					 		</div>
+					 		<div class="col-2 imagen-destacada pd-2">
+					 			<img src="img/imagen3.jpg">
+					 		</div>
+					 		<div class="col-2 imagen-destacada pd-2">
+					 			<img src="img/imagen4.jpg">
+					 		</div>
+					 		<div class="col-2 imagen-destacada pd-2">
+					 			<img src="img/imagen5.jpg">
+					 		</div>
+					 		<div class="col-2 imagen-destacada pd-2">
+					 			<img src="img/imagen6.jpg">
+					 		</div>
+					 	</div>
+					 </div>
+					<div class="col-1 empty"></div>
+				 </div>
+			</div>
+		</div>
 	</div>
 	<div class="container-fluid"><!--video-->
+		<div class="row">
+			<div class="col-12 video">
+				<iframe width="100%" height="315" src="https://www.youtube.com/embed/zSWdZVtXT7E" frameborder="0" allowfullscreen></iframe>
+			</div>
+		</div>
 	</div>
-	<div class="container-fluid"><!--contenido-->
+	<div class="container-fluid contenidos"><!--contenido-->
+		<div class="row">
+			<div class="col-6 refuerzo">
+				<h2>Don't be late,</h2>
+				<h1 class="large">Book your ticket now!</h1>
+				<h2 class="lightcolor">Easy, simple & fast</h2>
+				<div class="row"><!--boton naranja-->
+					<div class="col-4 boton-ticket">
+						<div class="boton-naranja">
+							<span class="fa fa-ticket"></span> <span><a href="#">Book Ticket</a></span>
+						</div>
+					</div>
+				</div>
+				<h4>Get Discount up to 10% if  you are a member!</h4>
+		</div>
+			<div class="col-6 news">
+				<h1>News</h1><!--noticia 1-->
+				<p class="titulo-news">Lorem ipsum dolor sit amet</p>
+				<p class="date">Nov 11, 2014</p>
+				<p class="contenido-news brd-b">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<h1>News</h1><!--noticia 2-->
+				<p class="titulo-news">Lorem ipsum dolor sit amet</p>
+				<p class="date">Nov 11, 2014</p>
+				<p class="contenido-news brd-b">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+		</div>
 	</div>
 	<div class="container-fluid"><!--imagenes-->
 	</div>
