--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid"><!--banner-->
+	<div class="container-fluid cont-banner"><!--banner-->
 		<div class="row">
 			<div class="col-12 banner">
 				<div class="row">
@@ -91,7 +91,7 @@
 			<div class="col-12 marked">
 				<div class="row">
 					<div class="col-1 empty"></div>
-					<div class="col-10 contenidos">
+					<div class="col-10">
 					 	<div class="row">
 					 		<div class="col-2 imagen-destacada pd-2">
 					 			<img src="img/imagen1.jpg">
@@ -149,12 +149,35 @@
 				<p class="titulo-news">Lorem ipsum dolor sit amet</p>
 				<p class="date">Nov 11, 2014</p>
 				<p class="contenido-news brd-b">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<a href="#" class="dsct">More</a>
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid"><!--imagenes-->
+	<div class="container-fluid image-section"><!--imagenes-->
+		<div class="row">
+			<div class="col-3 imagen-destacada img-sct">
+				<img src="img/imagen7.jpg">
+			</div>
+			<div class="col-3 imagen-destacada img-sct">
+				<img src="img/imagen8.jpg">
+			</div>
+			<div class="col-3 imagen-destacada img-sct">
+				<img src="img/imagen9.jpg">
+			</div>
+			<div class="col-3 imagen-destacada img-sct">
+				<img src="img/imagen6.jpg">
+			</div>
+		</div>
 	</div>
-	<div class="container-fluid"><!--footer-->
+	<div class="container-fluid footer"><!--footer-->
+		<div class="row">
+			<div class="col-12">
+				<h4>Disclaimer</h4>
+				<p>This is freebies and not an official website, I have no intention of disclose any movie. Brand, news. <br> My goal here is to train or excercise my skill and share this freebies</p>
+				<p>Created by Alice Barker in Santiago - Chile</p>
+				<p><a href="http://alishibarker.tumblr.com/" target="_blank">Follow me in Tumblr!!</a></p>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
