soluciono problema icono banner

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 				<div class="row">
 					<div class="col-8 banner-img pr-l">
 						<img src="img/banner.jpg">
+						<div class="logo-bg6"><img src="img/icono.jpg" ></div>
 					</div>
 					<div class="col-3 banner-info mgt-4">
 						<h1 class="large brd-b">Big Hero 6</h1>
